# polygon_coverage_planning

./: .gitignore  CMakeLists.txt
geometry/: CMakeLists.txt
geometry/include/polygon_coverage_geometry/: cgal_definitions.h  test_comm.h
geometry/src/: bcd.cc  boolean.cc  cgal_comm.cc  decomposition.cc  offset.cc  sweep.cc  triangulation.cc  visibility_graph.cc  visibility_polygon.cc
planners/: CMakeLists.txt  package.xml
planners/include/polygon_coverage_planners/sensor_models/: frustum.h
planners/src/cost_functions/: path_cost_functions.cc
planners/src/graphs/: gtspp_product_graph.cc  sweep_plan_graph.cc
planners/src/planners/: polygon_stripmap_planner.cc  polygon_stripmap_planner_exact.cc  polygon_stripmap_planner_exact_preprocessed.cc
planners/test/: planners-test.cpp
polygon_coverage_ros/: CMakeLists.txt  package.xml
polygon_coverage_ros/include/polygon_coverage_ros/: coverage_planner.h  polygon_planner_base.h
polygon_coverage_ros/src/: coverage_planner_node.cc  polygon_planner_base.cc
solvers/: CMakeLists.txt
solvers/include/polygon_coverage_solvers/impl/: graph_base_impl.h
solvers/src/: boolean_lattice.cc  combinatorics.cc  gk_ma.cc
solvers/test/: gk_ma-test.cpp
